--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,14 +7,51 @@
         <title>Dobro došli na finalnu verziju web shopa</title>
     </h:head>
     <h:body>
-        <h:dataTable  var="product" value="#{productManagedBean.allProducts}">
+        <h:form>
+            <h:dataTable border="1" style="border-collapse: collapse" var="product" value="#{productManagedBean.allProducts}">
+                <h:column>
+                    <f:facet name="header">Proizvod</f:facet>
+                        #{product.name}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Cijena</f:facet>
+                        #{product.price}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Dodaj</f:facet>
+                    <h:commandButton value="U korpu" actionListener="#{productManagedBean.addProductToShoppingCart(product)}">
+                        <f:ajax execute="@form" render="shoppingCartTable"></f:ajax>
+                    </h:commandButton>
+                </h:column>
+            </h:dataTable>
+            <br/>
+            <h:outputText value="Količina"/>
+            <h:selectOneMenu value="#{productManagedBean.quantity}">
+                <f:selectItem itemValue="1" itemLabel="1 proizvod"/>
+                <f:selectItem itemValue="2" itemLabel="2 proizvoda"/>
+                <f:selectItem itemValue="3" itemLabel="3 proizvoda"/>
+                <f:selectItem itemValue="4" itemLabel="4 proizvoda"/>
+            </h:selectOneMenu>
+        </h:form>
+        
+        <br/>
+        <h3>Vaša korpa:</h3>
+        <h:dataTable border="1" style="border-collapse: collapse" id="shoppingCartTable" var="shoppingCartItem" value="#{productManagedBean.shoppingCartItems}">
             <h:column>
-                <f:facet name="header">Proizvod</f:facet>
-                    #{product.name}
+                <f:facet name="header">Ime proizvoda</f:facet>
+                #{shoppingCartItem.product.name}
             </h:column>
             <h:column>
-                <f:facet name="header">Cijena</f:facet>
-                    #{product.price}
+                <f:facet name="header">Jedinična cijena</f:facet>
+                #{shoppingCartItem.product.price}
+            </h:column>
+            <h:column>
+                <f:facet name="header">Količina</f:facet>
+                #{shoppingCartItem.quantity}
+            </h:column>
+            <h:column>
+                <f:facet name="header">Ukupna cijena</f:facet>
+                #{shoppingCartItem.totalPrice}
             </h:column>
         </h:dataTable>
     </h:body>
